fix typos 	modified:   VG.HTM

--- a/VG.HTM
+++ b/VG.HTM
@@ -63,12 +63,13 @@ that got you to this page to get live links.</i></p><p>
 <b>YOUR FIRST DAY AT CLASS</b><br>
 You might like to dive right into the first lecture of 
 the semester.  Then the link similar to, "Slides and videos for 
-each class period" is for you.  After class Professor De Boer 
-uploaded the Zoom recordings to YouTube without any editing. 
-Those videos are available from links that are similar to 
-"VIDEO" or "V".  The slides he used in the lecture can also 
-be separately downloaded as a PDF file by clicking on the 
-date of the lecture.<br><br>
+each class period" is for you.  That link will get you to an 
+index page with one line for each class period.  Each line 
+in the index will have a "VIDEO" or "V" link which will get 
+you to the video of that lecture.  The videos were uploaded 
+directly after class with no editing.  The slides used in 
+the lecture can also be separately downloaded as PDF 
+files by clicking on the dates of the lectures.<br><br>
 
 Feel free to explore all the other links to the extent of 
 your interest.  If you would like to do homework, for copyright 
@@ -76,18 +77,18 @@ reasons you will need access to a textbook to get the problem
 statements.  Professor De Boer cannot grade your homework 
 because he is retired now.  Depending on his schedule, Professor 
 De Boer might be willing to offer helpful tips on some of 
-the homework.  He tries to respond to all e-mail within a day, 
-but due to retirement it sometimes takes longer.  
+the homework.  He tries to respond to all e-mails within a day, 
+but due to retirement it sometimes takes longer.<br><br>
 
 In some textbooks there are some homework answers available 
 at the end of the Chapters, in the back of the book, or at the 
 publisher's Web site.  Read the notes at the bottom of the 
-course's homework page for details about the availabiity of 
+course's homework page for details about the availability of 
 any such answers.  If no answer is available for a homework 
-problem you might consider looking for ways to prove to 
+problem, you might consider looking for ways to prove to 
 yourself that your answer is correct.  This can sometimes be 
 done by pursuing a different solution technique or by pairing 
-up with a friend and seeing of your answers match.  <br><br>
+up with a friend and seeing if your answers match.  <br><br>
 
 <b>SAFETY and SECURITY</b><br>
 There are no guarantees in this world.  Visitors should do 
