slides and videos for today 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -307,7 +307,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=MgguFFBkb8Q">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Equ'n of angle mod., var defined, FM-PM compared, def. freq., Narrow B<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment-->Tx antenna techneques, NBFM via QAM, Wideband &amp; Bessel functions. <!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Tx antenna techniques, NBFM via QAM, Wideband &amp; Bessel functions. <!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Easter Break (no class)</font><!--end comment--></td>  
    </TR><!-- Week of 4/10 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -366,17 +366,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/260757177/download?download_frd=1"><!-- -->
 	  5/01<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/260935884/download?download_frd=1"><!-- -->
-      5/03<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      5/05<!-- --</a><!-- --></td>
+      5/03<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/261111514/download?download_frd=1"><!-- -->
+      5/05<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=ptrZpnYSRkM">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=AhYsrYq6u6E">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Q4P5SBuhBdE">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Defn of Random variable, CDF, PDF, Important types of random variables<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->nCr, nPr, w/replacement, Random Variables as models of systems<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Last day of class.  "Assessment Activity"</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Central limit Thm, more Ch 5 slides, Academy Awards <font color=grey>Last day of class.</font><!--end comment--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
 </TABLE></p>
 </BODY>
