--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -121,7 +121,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Channel model, Experiment v. theory, signal models, intro matlab<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Matlab & Matrix multiplication, <b>Ch. 2</b>, common signals, two sinc functions<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Symmetry (even, odd, hermitian), power (watts v. watts relative to 1 &Omega;) <!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Symmetry (even, odd, Hermitian), power (watts v. watts relative to 1 &Omega;) <!--end comment--></td>  
    </TR><!-- Week of 1/23 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
@@ -171,7 +171,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=puqSwKGju-M">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Introduction to Fourier Series, The Quintessential Example<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment-->Spectrograms, F.S. of a cosine, Disscussion: appliation of F.S. to photos<!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Spectrograms, F.S. of a cosine, Discussion: application of F.S. to photos<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->F.S. of common signals, Exponential, Trigonometric, Compact F.S.<!--end comment--></td>  
    </TR><!-- Week of 2/13 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -307,7 +307,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=MgguFFBkb8Q">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Equ'n of angle mod., var defined, FM-PM compared, def. freq., Narrow B<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment-->Tx antenna techneques, NBFM via QAM, Wideband &amp; Bessel functions. <!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Tx antenna techniques, NBFM via QAM, Wideband &amp; Bessel functions. <!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Easter Break (no class)</font><!--end comment--></td>  
    </TR><!-- Week of 4/10 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -366,17 +366,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0501.pdf"><!-- -->
 	  5/01<!-- --></a><!-- --><br><!-- --><a href=
       "https://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0503.pdf"><!-- -->
-      5/03<!-- --></a><!-- --><br><!-- -><a href=
+      5/03<!-- --></a><!-- --><br><!-- --><a href=
       "https://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0505.pdf"><!-- -->
-      5/05<!-- -></a><!-- --></td>
+      5/05<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=ptrZpnYSRkM">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=AhYsrYq6u6E">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Q4P5SBuhBdE">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Defn of Random variable, CDF, PDF, Important types of random variables<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->nCr, nPr, w/replacement, Random Variables as models of systems<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Last day of class.  "Assessment Activity"</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Central limit Thm, more Ch 5 slides, Academy Awards <font color=grey>Last day of class.  "Assessment Activity"</font><!--end comment--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
 </TABLE></p>
 </BODY>
