--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -367,17 +367,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0501.pdf"><!-- -->
 	  5/01<!-- --></a><!-- --><br><!-- --><a href=
       "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0503.pdf"><!-- -->
-      5/03<!-- --></a><!-- --><br><!-- -><a href=
+      5/03<!-- --></a><!-- --><br><!-- --><a href=
       "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0505.pdf"><!-- -->
-      5/05<!-- -></a><!-- --></td>
+      5/05<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=vagKFvr3mRs">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=jHjNepUHzLw">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=aftHuZ5dCG8">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Private key authentication, Diffie-Hellman, hash functions, side attacks<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Message brokering, MQTT, JSON, Func sep within code via state mach.<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Last day of class.  "Assessment Activity"</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->State Machine in code via 2D array, Academy Awards <font color=grey>Last day of class</font><!--end comment--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
 </TABLE></p>
 </BODY>
