Remove Zoom links from EGR304, EGR363 courses.  There will be no more classes to Zoom into. 	modified:   S23/304/304S23DN_InfinityFree.HTM 	modified:   S23/304S23.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM 	modified:   S23/363S23.HTM

--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -376,7 +376,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Defn of Random variable, CDF, PDF, Important types of random variables<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->nCr, nPr, w/replacement, Random Variables as models of systems<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Central limit Thm, more Ch 5 slides, Academy Awards <font color=grey>Last day of class.  "Assessment Activity"</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Central limit Thm, more Ch 5 slides, Academy Awards <font color=grey>Last day of class</font><!--end comment--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
 </TABLE></p>
 </BODY>
