--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -377,7 +377,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Private key authentication, Diffie-Hellman, hash functions, side attacks<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Message brokering, MQTT, JSON, Func sep within code via state mach.<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->State Machine in code via 2D array, Academy Awards <font color=grey>Last day of class</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->State Machine in code via 2D array, Academy Awards <font color=grey>Last day of class</font><!--end comment ddb--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
 </TABLE></p>
 </BODY>
