publish solutions for EGR 304 PS#12

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 5/01/2023 10:07 pm) 
+                              >(Last update: 5/05/2023  9:00 pm) 
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -116,9 +116,9 @@ Read the classroom slides on security.      <br>&nbsp;
 		"https://dordt.instructure.com/courses/3642050/assignments/40957636"
 		>4/28</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/102797306/download?download_frd=1"
-        >2/14</a>
+        <a href=
+        "https://dordt.instructure.com/files/261149956/download?download_frd=1"
+        >5/05</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 Read this classroom slides on transmission lines.      <br>&nbsp; 
                                                        <br>&nbsp;
