Publish solutions for 363PS14, fix a typo in 304PS 	modified:   S23/304/304S23PS.HTM 	modified:   S23/363/363S23PS.HTM

--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   5/01/2023 11:33 am)
+                              >(Last update:   5/06/2023 2:38 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -93,8 +93,8 @@ PS                                                       </small>
 		"https://dordt.instructure.com/courses/3642167/assignments/41031924"
 		>5/05</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/207696301/download?download_frd=1"
+		<a href=
+        "https://dordt.instructure.com/files/261173752/download?download_frd=1"
         >5/06</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Probabiity and Random processes, Beyes'<br>&nbsp;
