A correction to slides for 3/22 in EGR 363/ also publish plans for HOW_S page. 	modified:   HOW_S/MICS/mic_types.html 	modified:   S23/363/363S23DN.HTM

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -2137,7 +2137,21 @@ one to use.
 
 Planned for the future on this page:<br>
 <br>
---Capsule technologies<br><br>
+--Capsule technologies<br>
+&nbsp; &nbsp; * dynamic<br>
+&nbsp; &nbsp; * condenser<br>
+&nbsp; &nbsp; * electret<br>
+&nbsp; &nbsp; * piezoelectric, a.k.a. crystal<br>
+&nbsp; &nbsp; * ribbon<br>
+&nbsp; &nbsp; * carbon<br>
+&nbsp; &nbsp; * fiber-optic<br>
+&nbsp; &nbsp; * laser<br>
+&nbsp; &nbsp; * MEMS<br> 
+&nbsp; &nbsp; * Plasma<br> 
+&nbsp; &nbsp; * "Speaker in reverse" (kick drum mic)  <br><br>
+
+
+
 
 Planned for the future on another page:<br>
 -Techniques for using microphones<br><br></p>
