Update my cv, ces logo

--- a/CV.HTM
+++ b/CV.HTM
@@ -163,7 +163,7 @@
     </TD>
 
     <TD WIDTH="470" COLSPAN="2"><DIV>
-        Western Christian High School, Hull, Iowa, <i>August 2015-present</i><BR><BR></DIV>
+        Western Christian High School, Hull, Iowa, <i>2015-2023</i><BR><BR></DIV>
     </TD>
 </TR>
 
@@ -177,12 +177,12 @@
     </TD>
 
     <TD WIDTH="470"><DIV>
-        Member of the Board, <i>August 2015-Present</i><BR>
+        Member of the Board, <i>August 2015-August 2023</i><BR>
         Member of the Building and Grounds Committee of the Board, <br>
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-		&nbsp; &nbsp; &nbsp; &nbsp; <i>August 2015-present</i><BR><BR>
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
+		<i>August 2015-August 2023</i><BR><BR>
     </TD>
 </TR>
 
@@ -856,7 +856,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 4/13/2023)</small></DIV>
+         <small>(This page last updated on 9/18/2023)</small></DIV>
     </TD>
 </TR>
 
