--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -270,14 +270,15 @@ The discussion below starts with the largest present-day microphone styles (litt
 need for miniaturization) and proceeds toward the smallest microphone styles.<br><br>
 
 <i><b>Studio-type microphones</b></i><br>
-These are the characteristics of a studio-type microphone:<br><bt
+These are the characteristics of a studio-type microphone:
   <ul style="list-style-type:disc"><small>
-  <li>High-fidelity, at the sacrifice of miniaturization especially</li>
-  <li>Complicated to set-up. Several parts might mount to one stand.</li>
-  <li>The microphone may have several switches or adjustments on it.</li>
-  <li>The microphone may use connectors other than XLR type.
-  <li>It may and require special signal processing.
-  <li>Directional characteristics of the microphone can be used to advantage.
+  <li>As big and heavy as needed for high-fidelity. Miniaturization is not a goal.</li>
+  <li>Complicated set-up. Several parts might need assembly and adjustment.</li>
+  <li>The microphone may have several switches or adjustments on it.</li><!-- e.g. Austrian Audio OC818--> 
+  <li>In lieu of switches on the mic, some mics may be remotely controlled.</li>
+  <li>The microphone may use connectors other than XLR type.</li>
+  <li>It may require special signal processing and/or phantom power.</li>
+  <li>Directional characteristics of the microphone can be used to advantage.</li>
   <li>Mechanically and environmentally delicate.</li>
   <li>Generally not popular in house-of-worship applications.</li>
   </small></ul>
