--- a/HOW_S/loudness.html
+++ b/HOW_S/loudness.html
@@ -244,12 +244,19 @@ future, hopefully.)</p><br>
 <i>Loudness Fatigue</i>, also known as listener fatigue, auditory fatigue, ear fatigue, 
 and other similar names, has two aspects to it.<br><br>
 
-First, there are some muscles in the inner ear that allow your ear to adapt to various 
-sound-pressure levels.  In a quiet environment, probably below about 40 dB-SPL, these 
+First, there are some muscles in the inner ear (the <a href=
+"https://en.wikipedia.org/wiki/Tensor_tympani_muscle"
+>tensor tympani</a> and the <a href=
+"https://en.wikipedia.org/wiki/Stapedius_muscle"
+>stapedius</a>) that allow your ear to adapt to various 
+sound-pressure levels.  This phenomenon is called the <a href=
+"https://en.wikipedia.org/wiki/Acoustic_reflex"
+>acoustic reflex</a>.  In a quiet environment, probably below about 60 dB-SPL, these 
 muscles completely relax and allow the maximum motion from the diaphragm in the ear to 
 be transmitted into the cochlea.  As the average sound-pressure level of environment 
 increases these muscles tense up and damp out a portion of the sound to reduce the 
-pressure waves transmitted into the cochlea.  This muscular action in your ear is 
+pressure waves transmitted into the cochlea.  For most people these muscles are 
+significantly tensed at sound levels above about 80 dB-SPL.  This muscular action in your ear is 
 entirely subconscious and unnoticed.  This is one reason why various sound-pressure 
 levels do not relate so directly to loudness.  Our ears have a sort of internal 
 protection mechanism to muffle loud sounds.<br><br>
