Named "Selected_Publications" for easy reference 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -665,7 +665,10 @@
 		that better. </DIV> 
     </TD>
 </TR>
+</TABLE>
 
+<A name="Selected_Publications"></A>
+<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="0" WIDTH="570">
 <TR>
     <TD WIDTH="570" COLSPAN="3">
         <BR><H1>Selected Publications</H1>
