--- a/CV.HTM
+++ b/CV.HTM
@@ -621,20 +621,14 @@
 		<p>At the end of August 2021, I officially retired from the 
 		faculty at Dordt University.  They made a 
 		<a href="https://www.youtube.com/watch?v=lG0CtrVYgS8">tribute video</a> 
-		upon the occasion of my retirement.  I am now in a transition phase from 
-		Dordt University to whatever new engineering opportunities I 
-		find to glorify God in the future.  Certainly I am 
-		aware of more volunteer opportunities for engineers than 
-		I can shake a stick at!  For the next few years I plan to 
-		explore some aspects of my engineering talent in a 
-		direction that will enable my Kingdom service well into 
-		my elder years. One of the retirement activities I'm 
-		participating in is the IEEE's
-		"<a href="https://r4.ieee.org/skpl/">Science Kits for Public 
-		Libraries" project</a>."  I serve as the Grant Applications 
-		Chairperson for this project, a very part-time role.  Exactly 
-		what else I might do in retirement I do not know yet, but I 
-		trust the Holy Spirit will lead me.  
+		upon the occasion of my retirement.  One of the retirement activities I'm 
+		participating in is the IEEE's "<a href="https://r4.ieee.org/skpl/">Science 
+		Kits for Public Libraries" project</a>."  I serve as the Grant 
+		Applications Chairperson for this project, a very part-time role.  
+		I also volunteer one day a week at <a 
+		href="https://www.facebook.com/BargainAlleyThriftStore/"
+		>Bargain Alley</a> (thrift store) to advise on what to do 
+		with donated electronics items.  
 
         <P>In my role as a professor it was my desire to lead my 
 		students to be first-rate engineers in 
@@ -859,7 +853,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 9/18/2023)</small></DIV>
+         <small>(This page last updated on 10/18/2023)</small></DIV>
     </TD>
 </TR>
 
