Fixed broken link to CES paper on "Design Hierarchy" 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -704,8 +704,11 @@
 
         <P>D.F. De Boer, "Using Design Hierarchy in Digital Logic 
         to Illustrate the Scientific Method as a Human Invention" 
-        <a href=
+        <!--<a href=
         "https://sites.google.com/site/christiansandengineering/christian-engineering-conferences-ceec/2013-christian-engineering-conference/CEC%202013%20Proceedings.pdf?attredirects=0&d=1"
+        > -->
+		<a href=
+        "https://drive.google.com/file/d/1nWewpMgLoMBrzNPL4QjkdvEdP2_kgx_2/view"
         ><I>Proceedings of the 2013 Christian Engineering Conference</I></a>, 
         Atlanta, Georgia, June 2013, pp 99 &ndash; 106.</P>
 
