Added "Awards" to my CV 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -324,6 +324,78 @@
 		  >#P20500</a>)<br><br></DIV>
     </TD>
 </TR>
+<TR>
+    <TD WIDTH="570" COLSPAN="3">
+        <H1>Awards</H1>
+    </TD>
+</TR>
+
+<TR>
+    <TD WIDTH="50">
+        &nbsp;
+    </TD>
+
+    <TD WIDTH="520" COLSPAN="2"><DIV>
+        <u>IEEE EAB Meritorious Achievement Award in Outreach and Informal Education</u> <BR>
+		    <i>Issued by the IEEE Educational Activities Board, November 2023</i><br>
+		    &nbsp; &nbsp; &nbsp; 
+			"The Meritorious Achievement Award in Outreach and Informal Education <br>
+			&nbsp; &nbsp; &nbsp; 
+		    was established in 2006 by the IEEE Educational Activities Board (EAB) to <br>
+			&nbsp; &nbsp; &nbsp; 
+		    recognize members, who volunteer time and effort for the informal <br> 
+			&nbsp; &nbsp; &nbsp; 
+		    education community, and highlight the benefit that their work provides <br> 
+			&nbsp; &nbsp; &nbsp; 
+		    to pre-university and university teachers, students, parents of students,<br>
+			&nbsp; &nbsp; &nbsp; 
+		    and the public. These volunteers will have served in advisory, <br>
+			&nbsp; &nbsp; &nbsp; 
+		    educational, or fiduciary positions and used their professional background <br>
+			&nbsp; &nbsp; &nbsp; 
+		    to enhance understanding and involvement in IEEE’s fields of interest by <br>
+			&nbsp; &nbsp; &nbsp; 
+		    users of the informal education system." (Quoted from the award letter.)<br><br>
+	
+        "<u>Best Mopar" (July 2009) and <br>
+		    "3rd place, Late Model Modified Car" (August 2009)</u><BR>
+		    <i>Issued by the Sioux Center Show and Shine Car Show, July 2009 and the Rock Valley "Rally in the Valley Car Show, August 2009</i><br>
+		    &nbsp; &nbsp; &nbsp; 
+			For the successful conversion of a passenger car from gasoline to <br>
+			&nbsp; &nbsp; &nbsp; 
+			battery-electric power. This was a Senior Project conducted at Dordt <br>
+			&nbsp; &nbsp; &nbsp; 
+			University. I was the project's faculty adviser. Photos and details about <br>
+			&nbsp; &nbsp; &nbsp; 
+			the project are available at http://www.evalbum.com/2761 <br><br>
+			
+        <u>Siouxland IEEE Engineer-of-the-Year, 2007</u><BR>
+		    <i>Issued by IEEE, Siouxland Section</i><br>
+		    &nbsp; &nbsp; &nbsp; 
+			For volunteer contributions to the IEEE Siouxland Section as Chairperson <br>
+			&nbsp; &nbsp; &nbsp; 
+			of the Section.<br><br>
+
+         <u>2006 Merit Award, "Designing a cost effective Brushless DC Motor Controller"</u><BR>
+		    <i>Issued by Lincoln Arc Welding Foundation, Division IV, (2006)</i><br>
+		    &nbsp; &nbsp; &nbsp; 
+			An award given to a Senior Project completed at Dordt University. <br>
+			&nbsp; &nbsp; &nbsp; 
+			I was the project's faculty adviser.<br><br>
+
+         <u>Siouxland IEEE Engineer-of-the-Year, 1996</u><BR>
+		    <i>Issued by IEEE, Siouxland Section</i><br>
+		    &nbsp; &nbsp; &nbsp; 
+			For volunteer contributions to the IEEE Siouxland Section as Newsletter <br>
+			&nbsp; &nbsp; &nbsp; 
+			Editor for the Section.<br><br>
+
+			
+	
+
+	</DIV>
+    </TD>
+</TR>
 </TABLE>
 
 <A name="Read_More"></A>
@@ -856,7 +928,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 10/18/2023)</small></DIV>
+         <small>(This page last updated on 11/21/2023)</small></DIV>
     </TD>
 </TR>
 
