Updated SKPL award.  Added quote from the award. 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -355,7 +355,13 @@
 			&nbsp; &nbsp; &nbsp; 
 		    to enhance understanding and involvement in IEEE’s fields of interest by <br>
 			&nbsp; &nbsp; &nbsp; 
-		    users of the informal education system." (Quoted from the award letter.)<br><br>
+		    users of the informal education system." (Quoted from the award letter.)<br>
+			&nbsp; &nbsp; &nbsp; 
+		    This award was, "for pioneering and leading the IEEE Region 4 Science <br> 
+			&nbsp; &nbsp; &nbsp; 
+		    Kits for Public Libraries program that attracts and inspires the next <br>
+			&nbsp; &nbsp; &nbsp; 
+		    generation of STEM leaders." (quoted from the award)<br><br>
 	
         "<u>Best Mopar" (July 2009) and <br>
 		    "3rd place, Late Model Modified Car" (August 2009)</u><BR>
