Added links for recent IEEE award. 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -336,9 +336,17 @@
     </TD>
 
     <TD WIDTH="520" COLSPAN="2"><DIV>
-        <u>IEEE EAB Meritorious Achievement Award in Outreach and Informal Education</u> <BR>
+        <a href="https://www.ieee.org/education/awards/past-recipients-by-award-title.html#sec3"
+		target = "_blank"
+		>IEEE EAB Meritorious Achievement Award in <br>Outreach and Informal Education</a> <BR>
 		    <i>Issued by the IEEE Educational Activities Board, November 2023</i><br>
 		    &nbsp; &nbsp; &nbsp; 
+		    For "pioneering and leading the IEEE Region 4 Science <br> 
+			&nbsp; &nbsp; &nbsp; 
+		    Kits for Public Libraries program that attracts and inspires the next <br>
+			&nbsp; &nbsp; &nbsp; 
+		    generation of STEM leaders." (quoted from the award)<br><font size = -2>&nbsp;</font><br>
+			&nbsp; &nbsp; &nbsp; 
 			"The Meritorious Achievement Award in Outreach and Informal Education <br>
 			&nbsp; &nbsp; &nbsp; 
 		    was established in 2006 by the IEEE Educational Activities Board (EAB) to <br>
@@ -356,12 +364,12 @@
 		    to enhance understanding and involvement in IEEE’s fields of interest by <br>
 			&nbsp; &nbsp; &nbsp; 
 		    users of the informal education system." (Quoted from the award letter.)<br>
-			&nbsp; &nbsp; &nbsp; 
-		    This award was, "for pioneering and leading the IEEE Region 4 Science <br> 
-			&nbsp; &nbsp; &nbsp; 
-		    Kits for Public Libraries program that attracts and inspires the next <br>
-			&nbsp; &nbsp; &nbsp; 
-		    generation of STEM leaders." (quoted from the award)<br><br>
+			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+			<small>Video of the award ceremony is available <a href= 
+			"https://ieeetv.ieee.org/video/2023-ieee-educational-activities-board-awards" 
+			target = "_blank">here</a>.</small><br>
+			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+			<small>The relevant portion of the video is from timestamp 59:42 through 1:12:36.</small><br><br>
 	
         "<u>Best Mopar" (July 2009) and <br>
 		    "3rd place, Late Model Modified Car" (August 2009)</u><BR>
