Adding screengrab of recent award ceremony 	modified:   CV.HTM 	new file:   CV_files/SKPL_Award_Presentation_VideoScreenGrab1-02-46.jpg

--- a/CV.HTM
+++ b/CV.HTM
@@ -365,11 +365,14 @@
 			&nbsp; &nbsp; &nbsp; 
 		    users of the informal education system." (Quoted from the award letter.)<br>
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-			<small>Video of the award ceremony is available <a href= 
+			<small><a href= 
 			"https://ieeetv.ieee.org/video/2023-ieee-educational-activities-board-awards" 
-			target = "_blank">here</a>.</small><br>
+			target = "_blank">Video of the award ceremony is available here</a>.</small><br>
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-			<small>The relevant portion of the video is from timestamp 59:42 through 1:12:36.</small><br><br>
+			<small>The relevant portion of the video is from timestamp 59:42 through 1:12:36.</small><br>
+			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+			<small>Here is a <a href="CV_files/SKPL_Award_Presentation_VideoScreenGrab1-02-46.jpg"
+			>screengrab from the video at 1:02:46</a>.</small><br><br>
 	
         "<u>Best Mopar" (July 2009) and <br>
 		    "3rd place, Late Model Modified Car" (August 2009)</u><BR>
