Adding photos of award plaques 	modified:   CV.HTM 	new file:   CV_files/IEEE-EAB_Award_2023_TransparentBG_IMG_20231121_212451974.png 	new file:   CV_files/IEEE-EAB_Award_2023_TransparentBG_PerspectiveIMG_20231121_212451974.png 	new file:   CV_files/IEEE_Siouxland_EoY_1996_IMG_20231121_212739229.png 	new file:   CV_files/IEEE_Siouxland_EoY_1996_Perspective_IMG_20231121_212739229.png 	new file:   CV_files/IEEE_Siouxland_EoY_2007_IMG_20231121_212645278.png 	new file:   CV_files/IEEE_Siouxland_EoY_2007_Perspective_IMG_20231121_212645278.png 	new file:   CV_files/NeonRevoltTrophies_IMG_20231121_195045123_GreyBG.png 	new file:   CV_files/NeonRevoltTrophies_TransparentBG_Perspective_IMG_20231121_195045123.png

--- a/CV.HTM
+++ b/CV.HTM
@@ -332,10 +332,11 @@
 
 <TR>
     <TD WIDTH="50">
-        &nbsp;
+        <a href="CV_files/IEEE-EAB_Award_2023_TransparentBG_IMG_20231121_212451974.png">
+		<img src="CV_files/IEEE-EAB_Award_2023_TransparentBG_PerspectiveIMG_20231121_212451974.png"
+		width="50"></a>
     </TD>
-
-    <TD WIDTH="520" COLSPAN="2"><DIV>
+    <TD WIDTH="520" COLSPAN="2"><div>
         <a href="https://www.ieee.org/education/awards/past-recipients-by-award-title.html#sec3"
 		target = "_blank"
 		>IEEE EAB Meritorious Achievement Award in <br>Outreach and Informal Education</a> <BR>
@@ -373,7 +374,14 @@
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 			<small>Here is a <a href="CV_files/SKPL_Award_Presentation_VideoScreenGrab1-02-46.jpg"
 			>screengrab from the video at 1:02:46</a>.</small><br><br>
-	
+	</td></tr>
+<tr>
+	<td width="50">
+        <a href="CV_files/NeonRevoltTrophies_IMG_20231121_195045123_GreyBG.png">
+		<img src="CV_files/NeonRevoltTrophies_TransparentBG_Perspective_IMG_20231121_195045123.png"
+		width="48"></a>
+	</td>
+	<td width="520" colspan="2"><div><br>	
         "<u>Best Mopar" (July 2009) and <br>
 		    "3rd place, Late Model Modified Car" (August 2009)</u><BR>
 		    <i>Issued by the Sioux Center Show and Shine Car Show, July 2009 and the Rock Valley "Rally in the Valley Car Show, August 2009</i><br>
@@ -384,35 +392,55 @@
 			&nbsp; &nbsp; &nbsp; 
 			University. I was the project's faculty adviser. Photos and details about <br>
 			&nbsp; &nbsp; &nbsp; 
-			the project are available at http://www.evalbum.com/2761 <br><br>
-			
-        <u>Siouxland IEEE Engineer-of-the-Year, 2007</u><BR>
+			the project are available at <a href="http://www.evalbum.com/2761"
+			>The EV Photo Album, page 2761</a><br><br>
+			<br><br><br><br><br><br>
+	</td></tr>
+<tr>
+	<td width="50">
+        <a href="CV_files/IEEE_Siouxland_EoY_2007_IMG_20231121_212645278.png">
+		<img src="CV_files/IEEE_Siouxland_EoY_2007_Perspective_IMG_20231121_212645278.png"
+		width="46"></a>
+	</td>
+	<td width="520" colspan="2"><div>	        
+	<u>Siouxland IEEE Engineer-of-the-Year, 2007</u><BR>
 		    <i>Issued by IEEE, Siouxland Section</i><br>
 		    &nbsp; &nbsp; &nbsp; 
 			For volunteer contributions to the IEEE Siouxland Section as Chairperson <br>
 			&nbsp; &nbsp; &nbsp; 
 			of the Section.<br><br>
-
-         <u>2006 Merit Award, "Designing a cost effective Brushless DC Motor Controller"</u><BR>
+			<br><br><br><br><br><br><br>
+	</td></tr>
+<tr>
+	<td width="50">
+        <!-- <a href="CV_files/NeonRevoltTrophies_IMG_20231121_195045123_GreyBG.png">
+		<img src="CV_files/NeonRevoltTrophies_TransparentBG_Perspective_[IMG_20231121_195045123.png"
+		width="50"></a> --> &nbsp;
+	</td>
+	<td width="520" colspan="2"><div><br><br>
+	<u>2006 Merit Award, "Designing a cost effective Brushless DC Motor Controller"</u><BR>
 		    <i>Issued by Lincoln Arc Welding Foundation, Division IV, (2006)</i><br>
 		    &nbsp; &nbsp; &nbsp; 
 			An award given to a Senior Project completed at Dordt University. <br>
 			&nbsp; &nbsp; &nbsp; 
 			I was the project's faculty adviser.<br><br>
-
-         <u>Siouxland IEEE Engineer-of-the-Year, 1996</u><BR>
+	</td></tr>
+<tr>
+	<td width="50">
+        <a href="CV_files/IEEE_Siouxland_EoY_1996_IMG_20231121_212739229.png">
+		<img src="CV_files/IEEE_Siouxland_EoY_1996_Perspective_IMG_20231121_212739229.png"
+		width="46"></a>
+	</td>
+	<td width="520" colspan="2"><div><br><br>
+	<u>Siouxland IEEE Engineer-of-the-Year, 1996</u><BR>
 		    <i>Issued by IEEE, Siouxland Section</i><br>
 		    &nbsp; &nbsp; &nbsp; 
 			For volunteer contributions to the IEEE Siouxland Section as Newsletter <br>
 			&nbsp; &nbsp; &nbsp; 
 			Editor for the Section.<br><br>
+			<br><br><br><br><br><br><br>
 
-			
-	
-
-	</DIV>
-    </TD>
-</TR>
+	</td></tr>
 </TABLE>
 
 <A name="Read_More"></A>
