Added a logo for the LincolnArcWeldingFoundation 	modified:   CV.HTM 	new file:   CV_files/LincolnArcWeldingFoundation.png 	new file:   CV_files/LincolnArcWeldingFoundation_Perspective.png

--- a/CV.HTM
+++ b/CV.HTM
@@ -413,9 +413,9 @@
 	</td></tr>
 <tr>
 	<td width="50">
-        <!-- <a href="CV_files/NeonRevoltTrophies_IMG_20231121_195045123_GreyBG.png">
-		<img src="CV_files/NeonRevoltTrophies_TransparentBG_Perspective_[IMG_20231121_195045123.png"
-		width="50"></a> --> &nbsp;
+        <a href="CV_files/LincolnArcWeldingFoundation.png">
+		<img src="CV_files/LincolnArcWeldingFoundation_Perspective.png"
+		width="44"></a>
 	</td>
 	<td width="520" colspan="2"><div><br><br>
 	<u>2006 Merit Award, "Designing a cost effective Brushless DC Motor Controller"</u><BR>
@@ -424,6 +424,7 @@
 			An award given to a Senior Project completed at Dordt University. <br>
 			&nbsp; &nbsp; &nbsp; 
 			I was the project's faculty adviser.<br><br>
+			<br><br><br><br><br>
 	</td></tr>
 <tr>
 	<td width="50">
@@ -431,7 +432,7 @@
 		<img src="CV_files/IEEE_Siouxland_EoY_1996_Perspective_IMG_20231121_212739229.png"
 		width="46"></a>
 	</td>
-	<td width="520" colspan="2"><div><br><br>
+	<td width="520" colspan="2"><div>
 	<u>Siouxland IEEE Engineer-of-the-Year, 1996</u><BR>
 		    <i>Issued by IEEE, Siouxland Section</i><br>
 		    &nbsp; &nbsp; &nbsp; 
